# jitevm

./: .gitignore  .gitmodules  Cargo.toml  test_data.rs
benches/: evm_bench.rs  storage_bench.rs
bins/jitty/: Cargo.toml
bins/jitty/src/: cmd.rs  inspectors.rs  lib.rs  main.rs  util.rs
bins/jitty/src/cmd/: cycle_diff.rs  deploy_cmd.rs  deploy_image.rs  execute_tx.rs  ir_inspect_cmd.rs  run_cmd.rs  run_inspect.rs
bins/jitty/src/inspectors/: jumpdest.rs
bins/tracer/: Cargo.toml  main.rs
contracts/: exp.bc  exp.huff  fibonacci.bc  fibonacci.huff  fibonacci_repetitions.bc  fibonacci_repetitions.huff  mload.bc  mload.huff  mstore8.bc  mstore8.huff  reth_random_stuff.bc  reth_random_stuff.huff  sha3.bc  sha3.huff  sload.bc  sload.huff  snailtracer.bc  store.bc  store.huff
crates/jit-contract/: Cargo.toml
crates/jit-contract/benches/: evm_bench.rs  storage_bench.rs
crates/jit-contract/src/: code.rs  db.rs  jit.rs  lib.rs
crates/jit-contract/src/jit/: context.rs  contract.rs  cursor.rs  error.rs  ffi.rs  gas.rs  ops.rs  test.rs  tracing.rs  types.rs
crates/jit-contract/src/jit/context/: block.rs  result.rs  transaction.rs
crates/jit-contract/src/jit/ops/: arithmetic.rs  block.rs  bytes.rs  control_flow.rs  memory.rs  misc.rs  stack.rs  state.rs
crates/jit-contract/src/jit/test/: context_tests.rs  jump_tests.rs  memory_tests.rs  operations.rs  state_tests.rs
crates/jit-contract/src/jit/tracing/: block_times.rs  cycle_breakpoint.rs
crates/jit-contract/tests/: snailtracer.json  test_jit.rs  test_snailtracer.rs
crates/jit-contract/tests/common/: mod.rs
scripts/: make_cfg.sh
src/: code.rs  constants.rs  db.rs  interpreter.rs  jit.rs  lib.rs  main.rs  spec.rs  test_data.rs
src/jit/: arithmetic.rs  bytes.rs  context.rs  contract.rs  control_flow.rs  cursor.rs  error.rs  ffi.rs  gas.rs  jump.rs  memory.rs  ops.rs  stack.rs  test.rs  types.rs
src/jit/context/: block.rs  result.rs  state.rs  transaction.rs
src/jit/ops/: arithmetic.rs  bytes.rs  control_flow.rs  memory.rs  misc.rs  stack.rs  state.rs
src/jit/test/: arithmetic_tests.rs  context_tests.rs  i256.rs  jump_tests.rs  memory_tests.rs  misc_tests.rs  operations.rs  stack_tests.rs  state_tests.rs  storage_tests.rs
tests/: test_jit.rs
