[workspace]
resolver = "2"
members = [
    "bins/jitty",
    "crates/jit-contract"
]

[workspace.dependencies]
jit-contract = { path = "crates/jit-contract" }
alloy-primitives = "0.4"
hex = "0.4"
thiserror = "1.0.31"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master" }
itertools = "0.10.3"
reth-db = { git = "https://github.com/paradigmxyz/reth.git" }
reth-interfaces = { git = "https://github.com/paradigmxyz/reth.git" }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git" }
revm = { git = "https://github.com/bluealloy/revm.git", rev = "1609e07c68048909ad1682c98cf2b9baa76310b5" }
revm-primitives = { git = "https://github.com/bluealloy/revm.git", rev = "1609e07c68048909ad1682c98cf2b9baa76310b5" }
sha3 = "0.10.8"
ruint = "1.10.1"
criterion = "0.5.1"
paste = "1.0.7"
rand = "0.8.5"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
