[package]
name = "jit-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives.workspace = true
thiserror.workspace = true
inkwell.workspace = true
reth-interfaces.workspace = true
reth-provider.workspace = true
revm.workspace = true
revm-primitives.workspace = true
ruint.workspace = true
serde.workspace = true
sha3.workspace = true


[features]
default = ["llvm16"]
llvm14 = ["inkwell/llvm14-0"]
llvm16 = ["inkwell/llvm16-0"]

[dev-dependencies]
criterion.workspace = true
hex.workspace = true
paste.workspace = true
rand.workspace = true
serde_json.workspace = true

[[bench]]
name = "evm_bench"
harness = false

[[bench]]
name = "storage_bench"
harness = false
